--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,11 @@ jobs:
                 python-version : '3.10'
             - name : test
               run : python test_functions.py
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name : Deploy
+              run : echo "Deployed"
 
             
             
