--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
             - name : test
               run : python test_functions.py
     deploy:
+        needs : test
         runs-on: ubuntu-latest
         steps:
             - name : Deploy
